tests/run/error_ptr_in_generic.out
tests/run/error_ptr_in_generic.em:10:13: error: a 'Ptr' is a linear FFI handle and cannot be an enum payload
tests/run/error_ptr_in_generic.em:10:13: help: a 'Ptr' has no destructor — keep it in a local and close it (e.g. fclose), or pass it by 'move'; it cannot be stored in an array, field, channel, or generic container (where its close obligation would be lost)
